--- a/package.json
+++ b/package.json
@@ -74,14 +74,21 @@
     "@progress/kendo-angular-l10n": "^2.0.1",
     "@progress/kendo-angular-popup": "^3.0.5",
     "@progress/kendo-theme-default": "^4.19.0",
+    "@rdkmaster/icon-font": "^1.0.6",
+    "@rdkmaster/jigsaw": "^9.1.12",
     "@swimlane/ngx-datatable": "^17.0.0",
     "ag-grid-angular": "^23.2.0",
     "ag-grid-community": "^23.2.0",
     "bootstrap": "^4.5.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^3.6.5",
+    "echarts": "^4.7.0",
     "express": "^4.15.2",
+    "file-saver": "^2.0.1",
+    "jszip": "^3.3.0",
     "ng-zorro-antd": "^9.2.1",
+    "ngx-color-picker": "^8.0.0",
+    "ngx-perfect-scrollbar": "^8.0.0",
     "primeng": "^9.1.0",
     "rxjs": "^6.5.5",
     "tns-core-modules": "^6.5.7",
